# veda_qtlecture

part1/: CMakeLists.txt  datetime.cpp  datetime.h  datetime.ui  layoutwidget.cpp  layoutwidget.h  layoutwidget.ui  main.cpp  resource.qrc  widget.cpp  widget.h  widget.ui
part2/: CMakeLists.txt  main.cpp  quiz.cpp  quiz.ui  widget.cpp
part3/: CMakeLists.txt  main.cpp  signalslot.cpp  signalslot.h  spin.cpp  spin.h  widget.cpp  widget.h
part4/: CMakeLists.txt  model.cpp  model.h  progressdiag.cpp  progressdiag.h  widget.cpp  widget.h  widget.ui
part5/: CMakeLists.txt  form.ui  mainwindow.cpp  mainwindow.h  mdimainwindow.cpp  mdimainwindow.h
practice/: CMakeLists.txt  main.cpp  widget.cpp  widget.h
practice2/: CMakeLists.txt  latency.cpp  latency.h  latency.ui  main.cpp
